--- a/app/views/home/about.html.slim
+++ b/app/views/home/about.html.slim
@@ -21,7 +21,10 @@
         h4
           a href="https://telegram.me/unn4m3d" unn4m3d
         span.text-muted Лаунчер, сайт, обслуживание сервера
-        
+
+hr /
+
+.container
   .row
     .text-xs-center
       .h1 Исходный код
@@ -34,6 +37,9 @@
         | Сайт :
         a href="https://github.com/unn4m3d/tsmc" GitHub
   
+hr /
+
+.container
   .row
     .text-xs-center
       .h1 FAQ
