--- a/app/views/layouts/menu.html.slim
+++ b/app/views/layouts/menu.html.slim
@@ -12,20 +12,20 @@
             a.dropdown-item href=new_user_session_path Лаунчер
         li.nav-item
           a.nav-link href=home_about_path О проекте
+      ul
       ul.nav.navbar-nav.float-xs-right
-        - if user_signed_in?
-          li.nav-item
-            a.nav-link href="#"  
-              | Привет,
-              = current_user.username
+        li.nav-item.dropdown 
+          - if user_signed_in?
+            a.nav-link.dropdown-toggle href="#" id="profile-menu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
+              | Привет, 
+              == current_user.username
               | !
-          li.nav-item
-            a.nav-link href=destroy_user_session_path Выйти
-        - else
-          li.nav-item
-            a.nav-link href="#" Привет, Гость!
-          li.nav-item
-            a.nav-link href=new_user_session_path Войти
-          li.nav-item
-            a.nav-link href=new_user_registration_path Регистрация
+            .dropdown-menu aria-labelledby="profile-menu"
+              a.dropdown-item href=destroy_user_session_path data-method="delete" Выйти
+          - else
+            a.nav-link.dropdown-toggle href="#" id="profile-menu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
+              | Привет, Гость!
+            .dropdown-menu aria-labelledby="profile-menu"
+              a.dropdown-item href=user_session_path Войти
+              a.dropdown-item href=new_user_registration_path Регистрация
   
