--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,6 +1,12 @@
 .jumbotron
   .container
-    .text-xs-center
-      h1.tsselect The Sinner
-      h3 Minecraft Servers
-      h6 There's a lot of work to do
+    .row
+      .col-xs-4
+        h1.tsselect The Sinner
+        h3 Minecraft Servers
+        h6 There's a lot of work to do
+      .col-xs-4
+        h3.text-muted # TODO News
+      .col-xs-4#monitoring
+        h3.text-muted # TODO Servers monitoring 
+        noscript Для мониторинга нужен включенный JavaScript
