Move clients folder to public/

--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -7,6 +7,6 @@
         h6 There's a lot of work to do
       .col-xs-4
         h3.text-muted # TODO News
-      .col-xs-4#monitoring
+      .col-xs-4#tsmon
         h3.text-muted # TODO Servers monitoring 
         noscript Для мониторинга нужен включенный JavaScript
