--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -18,4 +18,6 @@ html
     .container.text-xs-center 
       | View it on 
       a href="https://github.com/unn4m3d/tsmc" GitHub
+      /[if IE]
+        .alert This site won't work correctly with IE
       
