--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,3 +17,56 @@
  .alert {
    color: red;
  }
+
+progress[value] {
+  &.server-full {
+    &::-webkit-progress-value {
+      background-image:
+  	      -webkit-linear-gradient(-45deg,
+  	                           transparent 33%, rgba(0, 0, 0, .1) 33%,
+  	                           rgba(0,0, 0, .1) 66%, transparent 66%),
+  	      -webkit-linear-gradient(top,
+  	                           rgba(255, 255, 255, .25),
+  	                           rgba(0, 0, 0, .25)),
+  	      -webkit-linear-gradient(left, #f44, #f44);
+    }
+
+    &::-moz-progress-bar {
+      background-image:
+  	      -moz-linear-gradient(-45deg,
+  	                           transparent 33%, rgba(0, 0, 0, .1) 33%,
+  	                           rgba(0,0, 0, .1) 66%, transparent 66%),
+  	      -moz-linear-gradient(top,
+  	                           rgba(255, 255, 255, .25),
+  	                           rgba(0, 0, 0, .25)),
+  	      -moz-linear-gradient(left, #f44, #f44);
+    }
+  }
+  &::-webkit-progress-value {
+    background-image:
+  	   -webkit-linear-gradient(-45deg,
+  	                           transparent 33%, rgba(0, 0, 0, .1) 33%,
+  	                           rgba(0,0, 0, .1) 66%, transparent 66%),
+  	   -webkit-linear-gradient(top,
+  	                           rgba(255, 255, 255, .25),
+  	                           rgba(0, 0, 0, .25)),
+  	   -webkit-linear-gradient(left, #09c, #4f4);
+
+      border-radius: 2px;
+      background-size: 35px 20px, 100% 100%, 100% 100%;
+  }
+
+  &::-moz-progress-bar {
+    background-image:
+  	   -moz-linear-gradient(-45deg,
+  	                           transparent 33%, rgba(0, 0, 0, .1) 33%,
+  	                           rgba(0,0, 0, .1) 66%, transparent 66%),
+  	   -moz-linear-gradient(top,
+  	                           rgba(255, 255, 255, .25),
+  	                           rgba(0, 0, 0, .25)),
+  	   -moz-linear-gradient(left, #09c, #4f4);
+
+      border-radius: 2px;
+      background-size: 35px 20px, 100% 100%, 100% 100%;
+  }
+}
