--- a/app/views/layouts/menu.html.slim
+++ b/app/views/layouts/menu.html.slim
@@ -9,7 +9,7 @@
           a.nav-link.dropdown-toggle href="#" id="start-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" Начать игру
           .dropdown-menu aria-labelledby="start-dropdown"
             a.dropdown-item href=new_user_registration_path Регистрация
-            a.dropdown-item href=new_user_session_path Лаунчер
+            a.dropdown-item href="#" Скачать лаунчер
         li.nav-item
           a.nav-link href=home_about_path О проекте
       ul
@@ -17,8 +17,9 @@
         li.nav-item.dropdown 
           - if user_signed_in?
             a.nav-link.dropdown-toggle href="#" id="profile-menu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
-              | Привет, 
-              == current_user.username
+              | Привет,
+              strong 
+                == current_user.username
               | !
             .dropdown-menu aria-labelledby="profile-menu"
               a.dropdown-item href=destroy_user_session_path data-method="delete" Выйти
