--- a/app/views/posts/view.html.slim
+++ b/app/views/posts/view.html.slim
@@ -16,7 +16,7 @@
           = @post.created_at.to_s
         - else
           = @post.created_at.to_s
-          | ( обновлено
+          | &nbsp;(обновлено &nbsp;
           = @post.updated_at.to_s
           | )
       .tsbtns
