Launcher download link

--- a/app/views/layouts/menu.html.slim
+++ b/app/views/layouts/menu.html.slim
@@ -9,7 +9,7 @@
           a.nav-link.dropdown-toggle href="#" id="start-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" Начать игру
           .dropdown-menu aria-labelledby="start-dropdown"
             a.dropdown-item href=new_user_registration_path Регистрация
-            a.dropdown-item href="#" Скачать лаунчер
+            a.dropdown-item href=home_launcher_path Скачать лаунчер
         li.nav-item
           a.nav-link href=home_about_path О проекте
       ul
