--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -6,9 +6,9 @@
           | Сервер The Sinner - 
           a.ghlink href="https://github.com/unn4m3d/tsmc" первый open-source!
       .col-xs-4.text-xs-center
+        img.logo-main width=110 height=110 src=image_path("logo.png")
         h1.tsselect The Sinner
         h3 Minecraft Servers
-        h6 There's a lot of work to do
       
       .col-xs-4#tsmon
         h3.text-muted # TODO Servers monitoring 
