--- a/app/views/layouts/menu.html.slim
+++ b/app/views/layouts/menu.html.slim
@@ -1,7 +1,9 @@
 .navbar.navbar-light.bg-faded
   .navbar-inner 
     .container
-      a.navbar-brand href='/' The Sinner Minecraft Server
+      a.navbar-brand href='/' 
+        img.d-inline-block.align-top src=image_path("logo.png") alt="" width=30 height=30
+        | The Sinner
       ul.nav.navbar-nav
         li.nav-item.active
           a.nav-link href="/" Главная
