--- a/app/views/layouts/menu.html.slim
+++ b/app/views/layouts/menu.html.slim
@@ -24,6 +24,7 @@
                 == current_user.username
               | !
             .dropdown-menu aria-labelledby="profile-menu"
+              a.dropdown-item href=home_minecraft_settings_path Загрузить скин или плащ
               a.dropdown-item href=destroy_user_session_path data-method="delete" Выйти
           - else
             a.nav-link.dropdown-toggle href="#" id="profile-menu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
