--- a/app/views/devise/shared/_links.html.slim
+++ b/app/views/devise/shared/_links.html.slim
@@ -1,22 +1,25 @@
 - if controller_name != 'sessions'
-  == link_to "Войти", new_session_path(resource_name), class: 'btn btn-primary'
-  
+  .col
+    == link_to "Войти", new_session_path(resource_name), class: 'btn btn-primary'
+
 - if devise_mapping.registerable? && controller_name != 'registrations'
-  == link_to "Регистрация", new_registration_path(resource_name), class: 'btn btn-secondary'
-  
+  .col
+    == link_to "Регистрация", new_registration_path(resource_name), class: 'btn btn-secondary'
+
 - if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations'
-  == link_to "Забыли пароль?", new_password_path(resource_name), class: 'btn btn-secondary'
-  
+  .col
+    == link_to "Забыли пароль?", new_password_path(resource_name), class: 'btn btn-secondary'
+
 
 - if devise_mapping.confirmable? && controller_name != 'confirmations'
-  br /
-  == link_to 'Не получили инструкции для подтверждения?', new_confirmation_path(resource_name)
-  
+  .col
+    == link_to 'Не получили инструкции для подтверждения?', new_confirmation_path(resource_name)
+
 - if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks'
-  br /
-  == link_to 'Не получили инструкции для разблокировки?', new_unlock_path(resource_name)
-  
+  .col
+    == link_to 'Не получили инструкции для разблокировки?', new_unlock_path(resource_name)
+
 - if devise_mapping.omniauthable? 
-  br /
   - resource_class.omniauth_providers.each do |provider|
-    == link_to "Войти через #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider), class: 'btn'
+    .col
+      == link_to "Войти через #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider), class: 'btn'
