--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,23 +1,22 @@
 doctype html
 html
   head
-    title The Sinner Minecraft Server
+    title V.O.R.O.N.E.Z.H.
     == csrf_meta_tags
     == stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     == javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
-  body
+  body.bg-dark.text-light
     == render template: 'layouts/menu'
     .notice.text-xs-center
       = notice
     .alert.text-xs-center
       = alert
-    
+
     == yield
-    
+
   footer
-    .container.text-xs-center 
-      | View it on 
-      a href="https://github.com/unn4m3d/tsmc" GitHub
+    .container-fluid.text-center.bg-dark.text-light
+      | Запилено с особой жестокостью кривыми руками&nbsp;
+      a href="https://github.com/unn4m3d/" Плюшки
       /[if IE]
         .alert This site won't work correctly with IE
-      
