--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,16 +1,14 @@
 .jumbotron
-  .container
+  .container-fluid
     .row
-      .col-xs-4
-        p 
-          | Сервер The Sinner - 
-          a.ghlink href="https://github.com/unn4m3d/tsmc" первый open-source!
-      .col-xs-4.text-xs-center
+      .col-sm
+        p Сервер Minecraft от инженеров для инженеров. Посвящается челикам с горного дела
+      .col-sm.text-center.w-50
         img.logo-main width=110 height=110 src=image_path("logo.png")
-        h1.tsselect The Sinner
-        h3 Minecraft Servers
+        h1.tsselect.text-center Горное дело
+        h3 Многопользовательский симулятор горняка ДВФУ
       
-      .col-xs-4
+      .col-sm
         ul.nav.nav-tabs role='tablist'
           li.nav-item
             a.nav-link.active role='tab' data-toggle='tab' href='#tsmon' Мониторинг
