--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -15,9 +15,8 @@ html
     == yield
     
   footer
-    .container.text-xs-center 
-      | View it on 
-      a href="https://github.com/unn4m3d/tsmc" GitHub
+    .container-fluid.text-center 
+      | Че, пацаны, фефу?
       /[if IE]
         .alert This site won't work correctly with IE
       
