--- a/app/views/layouts/menu.html.slim
+++ b/app/views/layouts/menu.html.slim
@@ -1,9 +1,9 @@
-.navbar.navbar-light.bg-faded
-  .navbar-inner 
-    .container
+.navbar.navbar-light.bg-faded.navbar-expand-lg.p-3.w-100
+  .navbar-inner.w-100
+    .container-fluid.w-100
       a.navbar-brand href='/' 
         img.d-inline-block.align-top src=image_path("logo.png") alt="" width=30 height=30
-        | The Sinner
+        | Горное дело
       ul.nav.navbar-nav
         li.nav-item.active
           a.nav-link href="/" Главная
@@ -12,10 +12,16 @@
           .dropdown-menu aria-labelledby="start-dropdown"
             a.dropdown-item href=new_user_registration_path Регистрация
             a.dropdown-item href=home_launcher_path Скачать лаунчер
-        li.nav-item
-          a.nav-link href=home_about_path О проекте
+        li.nav-item.dropdown
+          a.nav-link.dropdown-toggle href="#" id="help-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" Помощь
+          .dropdown-menu aria-labelledby="help-dropdown"
+            a.dropdown-item href=help_index_url Начало игры
+            a.dropdown-item href=help_craftbook_url Механизмы (CraftBook)
+            a.dropdown-item href=help_commandbook_url Полезные команды (CommandBook)
+            a.dropdown-item href=help_worldguard_url Приват регионов (WorldGuard)
+            a.dropdown-item href=help_faq_url FAQ
       ul
-      ul.nav.navbar-nav.float-xs-right
+      ul.nav.navbar-nav.float-right
         li.nav-item.dropdown 
           - if user_signed_in?
             a.nav-link.dropdown-toggle href="#" id="profile-menu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
