--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,4 +1,4 @@
-.jumbotron
+.jumbotron.bg-dark
   .container-fluid
     .row
       .col-sm
@@ -15,7 +15,7 @@
           li.nav-item
             a.nav-link role='tab' data-toggle='tab' href='#tssg' График загрузки
 
-        .tab-content
+        .tab-content.bg-dark
           .tab-pane.active#tsmon role='tabpanel'
             h3.text-muted # TODO Servers monitoring
             noscript Для мониторинга нужен включенный JavaScript
