--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -2,8 +2,7 @@
 .jumbotron.bg-dark
   .container.text-center
     h2
-      | Edit &nbsp;
-      == resource_name.to_s.humanize
+      = t('devise.registrations.edit.title', resource: resource_name.to_s)
     == form_for resource, as: resource_name, url: registration_path(resource_name), html: { method: :put } do |f| 
       == devise_error_messages!
       
@@ -39,8 +38,9 @@
         == f.submit "Submit changes", class: 'btn btn-primary'
         
     p 
-      | Unhappy? &nbsp;
-      == link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'btn btn-secondary'
+      = t('devise.registrations.edit.unhappy')
+      | ? &nbsp;
+      == link_to t('devise.registrations.edit.cancel_my_account'), registration_path(resource_name), data: { confirm: t('devise.registrations.edit.are_you_sure') }, method: :delete, class: 'btn btn-secondary'
       
         
       
