Groups assignment by admins

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -80,3 +80,7 @@ body {
   background-repeat: repeat-x repeat-y;
   background-size: 64px;
 }
+
+.role-badge {
+	padding: 0.1rem 0.1rem !important;
+}
