Links to authors' profiles

--- a/app/views/posts/view.html.slim
+++ b/app/views/posts/view.html.slim
@@ -9,7 +9,8 @@
         
       hr /
       h6.text-muted
-        = @post.user.username
+        a href=home_profile_path(id: @post.user.id)
+          = @post.user.username
         
         | &nbsp;|&nbsp;
         - if @post.created_at == @post.updated_at
