--- a/app/views/posts/new.html.slim
+++ b/app/views/posts/new.html.slim
@@ -1,16 +1,19 @@
 .container
-  .row
-    h2 Добавить новость
-    == form_for :post, method: :post do |f|
-      .field
-        == f.label :title, "Заголовок"
-        br /
-        == f.text_field :title
+  .row.bg-dark
+    .col-12
+      h2 Добавить новость
+  .row.bg-dark
+    .col-12
+      == form_for :post, method: :post do |f|
+        .field
+          == f.label :title, "Заголовок"
+          br /
+          == f.text_field :title
       
-      .field
-        == f.label :text, "Текст"
-        br/
-        == f.text_area :text, size: "50x10"
+        .field
+          == f.label :text, "Текст"
+          br/
+          == f.text_area :text, size: "50x10"
       
-      == f.submit "Добавить", class: 'btn btn-primary'
+        == f.submit "Добавить", class: 'btn btn-primary'
       
